# convodynamics

./: README.md  analysis.ipynb  interface.py  pyproject.toml
convodynamics/: base.py  feature.py  feature_extractor.py  macro_metrics.py  metrics.py  preprocess.py  utils.py
convodynamics/converters/: __init__.py  base.py  candor.py
convodynamics/transformers/: __init__.py  speech_diarization.py
convodynamics/transformers/conversation_dynamics/: __init__.py  conversation_dynamics.py  metrics.py
